# bot-for-support

./: .env.example  Dockerfile  main.py  pyproject.toml  readme.md
app/: main.py
app/consumers/: handlers.py  main.py  schemas.py
app/containers/: providers.py
app/ddtos/: messages.py
app/exceptions/: chats.py
app/handlers/: chats.py
app/handlers/converters/: chats.py
app/keyboards/: reply.py
app/services/: chats.py  constants.py  web.py
app/services/converters/: chats.py
app/settings/: config.py
containers/: factories.py  providers.py
ddtos/: messages.py
docker_compose/: bot.yaml  consumer.yaml
exceptions/: base.py  chats.py
handlers/: base.py  chats.py
handlers/converters/: chats.py
services/: chats.py  constants.py  web.py
settings/: config.py
