[tool.poetry]
name = "tgshka"
version = "0.1.0"
description = ""
authors = ["Sergey <one6sergey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
ruff = "^0.6.1"
dishka = "^1.3.0"
faststream = "^0.5.19"
aiokafka = "^0.11.0"
watchfiles = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
